Added new example
