# src/main/java/org/acme/GreetingResource.java
@@ -4,6 +4,7 @@ import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 import org.acme.types.first.FirstExampleType;
 import org.acme.types.second.SecondExampleType;
+import org.acme.types.third.ThirdExampleType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -33,5 +34,13 @@ public class GreetingResource {
     @Path("/second")
     public void second(final SecondExampleType secondExampleType) {
         logger.info(secondExampleType.toString());
+    }
+
+
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Path("/third")
+    public void third(final ThirdExampleType thirdExampleType) {
+        logger.info(thirdExampleType.toString());
     }
 }
